[gd_scene load_steps=16 format=4 uid="uid://brav3qrwhhowm"]

[ext_resource type="TileSet" uid="uid://5tqns6sfvbyd" path="res://resources/tileset.tres" id="1_0hygj"]
[ext_resource type="PackedScene" uid="uid://bx3bt4i35r562" path="res://scenes/manager/enemy_manager.tscn" id="1_7cyh6"]
[ext_resource type="PackedScene" uid="uid://5bnou1ueih4m" path="res://scenes/game_object/game_camera/game_camera.tscn" id="1_8oa0h"]
[ext_resource type="PackedScene" uid="uid://cxur0it3acsm6" path="res://scenes/ui/arena_time_ui.tscn" id="1_485p3"]
[ext_resource type="Script" uid="uid://byp3ic13kg681" path="res://scenes/main/main.gd" id="1_a8run"]
[ext_resource type="PackedScene" uid="uid://bvjm48jsdwgbq" path="res://scenes/game_object/player/player.tscn" id="1_kebg5"]
[ext_resource type="PackedScene" uid="uid://cck7x4essvbkh" path="res://scenes/manager/arena_time_manager.tscn" id="2_67c3q"]
[ext_resource type="PackedScene" uid="uid://bolyvarva60kh" path="res://scenes/ui/end_screen.tscn" id="2_ouso4"]
[ext_resource type="PackedScene" uid="uid://b164lhpty5c0f" path="res://scenes/ui/experience_bar.tscn" id="2_yyfjg"]
[ext_resource type="PackedScene" uid="uid://fg3si73tjlgi" path="res://scenes/ui/vignette.tscn" id="3_th5th"]
[ext_resource type="PackedScene" uid="uid://du31xwyy42qkq" path="res://scenes/manager/experience_manager.tscn" id="4_hujxm"]
[ext_resource type="PackedScene" uid="uid://dqwodsggxm0re" path="res://scenes/manager/upgrade_manager.tscn" id="6_b1x3f"]
[ext_resource type="PackedScene" uid="uid://8fvcn3j27fjd" path="res://scenes/game_object/bat_enemy/bat_enemy.tscn" id="10_raeie"]
[ext_resource type="PackedScene" uid="uid://cdumd628hcuha" path="res://scenes/game_object/crab_enemy/crab_enemy.tscn" id="11_raeie"]
[ext_resource type="PackedScene" uid="uid://c4glf62yh68mp" path="res://scenes/autoload/music_player.tscn" id="14_7smn1"]

[node name="main" type="Node"]
script = ExtResource("1_a8run")
end_screen_scene = ExtResource("2_ouso4")

[node name="Vignette" parent="." instance=ExtResource("3_th5th")]

[node name="ExperienceBar" parent="." node_paths=PackedStringArray("experience_manager") instance=ExtResource("2_yyfjg")]
experience_manager = NodePath("../ExperienceManager")

[node name="ArenaTimeUI" parent="." node_paths=PackedStringArray("arena_time_manager") instance=ExtResource("1_485p3")]
arena_time_manager = NodePath("../ArenaTimeManager")

[node name="UpgradeManager" parent="." node_paths=PackedStringArray("experience_manager") instance=ExtResource("6_b1x3f")]
experience_manager = NodePath("../ExperienceManager")

[node name="ArenaTimeManager" parent="." instance=ExtResource("2_67c3q")]

[node name="EnemyManager" parent="." node_paths=PackedStringArray("arena_time_manager") instance=ExtResource("1_7cyh6")]
crab_enemy_scene = ExtResource("11_raeie")
bat_enemy_scene = ExtResource("10_raeie")
arena_time_manager = NodePath("../ArenaTimeManager")

[node name="ExperienceManager" parent="." instance=ExtResource("4_hujxm")]

[node name="MusicPlayer" parent="." instance=ExtResource("14_7smn1")]
unique_name_in_owner = true
process_mode = 3

[node name="GameCamera" parent="." instance=ExtResource("1_8oa0h")]

[node name="ParallaxBackground" type="Node2D" parent="."]

[node name="ParallaxLayer" type="Parallax2D" parent="ParallaxBackground"]
texture_repeat = 2
repeat_size = Vector2(640, 360)
repeat_times = 5

[node name="TileMapLayer" type="TileMapLayer" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
tile_map_data = PackedByteArray("AAABAAEAAAAAAAQAAAABAAIAAAAAAAQAAAACAAIAAAAAAAQAAAADAAIAAAABAAQAAAADAAEAAAAAAAQAAAACAAEAAAAAAAQAAAAoABUAAAAAAAQAAAAoABQAAAAAAAQAAAAoABMAAAABAAQAAAAoABIAAAAAAAQAAAAoABEAAAABAAQAAAAoABAAAAAAAAQAAAAoAA8AAAAAAAQAAAAoAA4AAAAAAAQAAAAoAA0AAAAAAAQAAAAoAAwAAAAAAAQAAAAoAAsAAAABAAQAAAAoAAoAAAAAAAQAAAAoAAkAAAAAAAQAAAAoAAgAAAAAAAQAAAAoAAcAAAAAAAQAAAAoAAYAAAAAAAQAAAAoAAUAAAAAAAQAAAAoAAQAAAABAAQAAAAoAAMAAAAAAAQAAAAoAAIAAAAAAAQAAAAoAAEAAAAAAAQAAAAoAAAAAAABAAQAAAAnABUAAAAAAAQAAAAnABQAAAAAAAQAAAAnABMAAAAAAAQAAAAnABIAAAAAAAQAAAAnABEAAAAAAAQAAAAnABAAAAAAAAQAAAAnAA8AAAAAAAQAAAAnAA4AAAABAAQAAAAnAA0AAAABAAQAAAAnAAwAAAAAAAQAAAAnAAsAAAAAAAQAAAAnAAoAAAAAAAQAAAAnAAkAAAAAAAQAAAAnAAgAAAAGAAMAAAAnAAcAAAAAAAQAAAAnAAYAAAAAAAQAAAAnAAUAAAAAAAQAAAAnAAQAAAAAAAQAAAAnAAMAAAAAAAQAAAAnAAIAAAAAAAQAAAAnAAEAAAABAAQAAAAnAAAAAAAAAAQAAAAmABUAAAAAAAQAAAAmABQAAAAAAAQAAAAmABMAAAABAAQAAAAmABIAAAAAAAQAAAAmABEAAAAAAAQAAAAmABAAAAAAAAQAAAAmAA8AAAAAAAQAAAAmAA4AAAAAAAQAAAAmAA0AAAAAAAQAAAAmAAwAAAABAAQAAAAmAAsAAAAAAAQAAAAmAAoAAAAAAAQAAAAmAAkAAAAAAAQAAAAmAAgAAAABAAQAAAAmAAcAAAAAAAQAAAAmAAYAAAAAAAQAAAAmAAUAAAAAAAQAAAAmAAQAAAAGAAMAAAAmAAMAAAAAAAQAAAAmAAIAAAAAAAQAAAAmAAEAAAABAAQAAAAmAAAAAAAGAAMAAAAlABUAAAAAAAQAAAAlABQAAAABAAQAAAAlABMAAAAAAAQAAAAlABIAAAAAAAQAAAAlABEAAAAAAAQAAAAlABAAAAAAAAQAAAAlAA8AAAABAAQAAAAlAA4AAAABAAQAAAAlAA0AAAAAAAQAAAAlAAwAAAAAAAQAAAAlAAsAAAAAAAQAAAAlAAoAAAAAAAQAAAAlAAkAAAAAAAQAAAAlAAgAAAAAAAQAAAAlAAcAAAAAAAQAAAAlAAYAAAAAAAQAAAAlAAUAAAABAAQAAAAlAAQAAAABAAQAAAAlAAMAAAAAAAQAAAAlAAIAAAAGAAMAAAAlAAEAAAAAAAQAAAAlAAAAAAAAAAQAAAAkABUAAAAAAAQAAAAkABQAAAABAAQAAAAkABMAAAAAAAQAAAAkABIAAAAAAAQAAAAkABEAAAAAAAQAAAAkABAAAAAAAAQAAAAkAA8AAAABAAQAAAAkAA4AAAAAAAQAAAAkAA0AAAAAAAQAAAAkAAwAAAAAAAQAAAAkAAsAAAAAAAQAAAAkAAoAAAAAAAQAAAAkAAkAAAAAAAQAAAAkAAgAAAAGAAMAAAAkAAcAAAAAAAQAAAAkAAYAAAAAAAQAAAAkAAUAAAAAAAQAAAAkAAQAAAAGAAMAAAAkAAMAAAAAAAQAAAAkAAIAAAAAAAQAAAAkAAEAAAABAAQAAAAkAAAAAAAGAAMAAAAjABUAAAAAAAQAAAAjABQAAAABAAQAAAAjABMAAAAGAAMAAAAjABIAAAAAAAQAAAAjABEAAAAAAAQAAAAjABAAAAABAAQAAAAjAA8AAAAAAAQAAAAjAA4AAAAAAAQAAAAjAA0AAAAAAAQAAAAjAAwAAAABAAQAAAAjAAsAAAAAAAQAAAAjAAoAAAAAAAQAAAAjAAkAAAAAAAQAAAAjAAgAAAAAAAQAAAAjAAcAAAAAAAQAAAAjAAYAAAABAAQAAAAjAAUAAAAAAAQAAAAjAAQAAAAAAAQAAAAjAAMAAAAAAAQAAAAjAAIAAAAAAAQAAAAjAAEAAAAAAAQAAAAjAAAAAAAAAAQAAAAiABUAAAAAAAQAAAAiABQAAAAAAAQAAAAiABMAAAAAAAQAAAAiABIAAAAAAAQAAAAiABEAAAAAAAQAAAAiABAAAAAAAAQAAAAiAA8AAAAGAAMAAAAiAA4AAAABAAQAAAAiAA0AAAAAAAQAAAAiAAwAAAAAAAQAAAAiAAsAAAAAAAQAAAAiAAoAAAAAAAQAAAAiAAkAAAABAAQAAAAiAAgAAAAAAAQAAAAiAAcAAAAAAAQAAAAiAAYAAAABAAQAAAAiAAUAAAAAAAQAAAAiAAQAAAAAAAQAAAAiAAMAAAAAAAQAAAAiAAIAAAABAAQAAAAiAAEAAAAAAAQAAAAiAAAAAAAGAAMAAAAhABUAAAAAAAQAAAAhABQAAAAAAAQAAAAhABMAAAAAAAQAAAAhABIAAAAAAAQAAAAhABEAAAABAAQAAAAhABAAAAAAAAQAAAAhAA8AAAAAAAQAAAAhAA4AAAAAAAQAAAAhAA0AAAAAAAQAAAAhAAwAAAAAAAQAAAAhAAsAAAAAAAQAAAAhAAoAAAAAAAQAAAAhAAkAAAAAAAQAAAAhAAgAAAAGAAMAAAAhAAcAAAAAAAQAAAAhAAYAAAAAAAQAAAAhAAUAAAABAAQAAAAhAAQAAAAAAAQAAAAhAAMAAAAAAAQAAAAhAAIAAAAAAAQAAAAhAAEAAAABAAQAAAAhAAAAAAABAAQAAAAgABUAAAAAAAQAAAAgABQAAAAAAAQAAAAgABMAAAABAAQAAAAgABIAAAAAAAQAAAAgABEAAAAAAAQAAAAgABAAAAAAAAQAAAAgAA8AAAAAAAQAAAAgAA4AAAAAAAQAAAAgAA0AAAAAAAQAAAAgAAwAAAAAAAQAAAAgAAsAAAABAAQAAAAgAAoAAAABAAQAAAAgAAkAAAAAAAQAAAAgAAgAAAABAAQAAAAgAAcAAAAAAAQAAAAgAAYAAAAAAAQAAAAgAAUAAAAAAAQAAAAgAAQAAAAAAAQAAAAgAAMAAAAAAAQAAAAgAAIAAAAAAAQAAAAgAAEAAAAAAAQAAAAgAAAAAAAAAAQAAAAfABUAAAABAAQAAAAfABQAAAAAAAQAAAAfABMAAAAAAAQAAAAfABIAAAAAAAQAAAAfABEAAAAAAAQAAAAfABAAAAAAAAQAAAAfAA8AAAABAAQAAAAfAA4AAAAAAAQAAAAfAA0AAAABAAQAAAAfAAwAAAAAAAQAAAAfAAsAAAAGAAMAAAAfAAoAAAAAAAQAAAAfAAkAAAAAAAQAAAAfAAgAAAAAAAQAAAAfAAcAAAAAAAQAAAAfAAYAAAAGAAMAAAAfAAUAAAAAAAQAAAAfAAQAAAAAAAQAAAAfAAMAAAAAAAQAAAAfAAIAAAAAAAQAAAAfAAEAAAAAAAQAAAAfAAAAAAAAAAQAAAAeABUAAAAAAAQAAAAeABQAAAAAAAQAAAAeABMAAAAAAAQAAAAeABIAAAABAAQAAAAeABEAAAAAAAQAAAAeABAAAAAAAAQAAAAeAA8AAAAAAAQAAAAeAA4AAAAAAAQAAAAeAA0AAAAAAAQAAAAeAAwAAAAAAAQAAAAeAAsAAAABAAQAAAAeAAoAAAAAAAQAAAAeAAkAAAAAAAQAAAAeAAgAAAAAAAQAAAAeAAcAAAAAAAQAAAAeAAYAAAAAAAQAAAAeAAUAAAAAAAQAAAAeAAQAAAAAAAQAAAAeAAMAAAAAAAQAAAAeAAIAAAAAAAQAAAAeAAEAAAAAAAQAAAAeAAAAAAABAAQAAAAdABUAAAAAAAQAAAAdABQAAAAAAAQAAAAdABMAAAAAAAQAAAAdABIAAAAAAAQAAAAdABEAAAAAAAQAAAAdABAAAAAAAAQAAAAdAA8AAAAAAAQAAAAdAA4AAAAAAAQAAAAdAA0AAAAAAAQAAAAdAAwAAAABAAQAAAAdAAsAAAAAAAQAAAAdAAoAAAAAAAQAAAAdAAkAAAAAAAQAAAAdAAgAAAABAAQAAAAdAAcAAAAAAAQAAAAdAAYAAAABAAQAAAAdAAUAAAAAAAQAAAAdAAQAAAAAAAQAAAAdAAMAAAABAAQAAAAdAAIAAAAAAAQAAAAdAAEAAAAAAAQAAAAdAAAAAAAAAAQAAAAcABUAAAABAAQAAAAcABQAAAAAAAQAAAAcABMAAAAAAAQAAAAcABIAAAABAAQAAAAcABEAAAAAAAQAAAAcABAAAAABAAQAAAAcAA8AAAABAAQAAAAcAA4AAAABAAQAAAAcAA0AAAAAAAQAAAAcAAwAAAAAAAQAAAAcAAsAAAAAAAQAAAAcAAoAAAAAAAQAAAAcAAkAAAAAAAQAAAAcAAgAAAAAAAQAAAAcAAcAAAAAAAQAAAAcAAYAAAAAAAQAAAAcAAUAAAAAAAQAAAAcAAQAAAABAAQAAAAcAAMAAAAAAAQAAAAcAAIAAAAAAAQAAAAcAAEAAAABAAQAAAAcAAAAAAAAAAQAAAAbABUAAAAAAAQAAAAbABQAAAABAAQAAAAbABMAAAAAAAQAAAAbABIAAAAAAAQAAAAbABEAAAAAAAQAAAAbABAAAAAAAAQAAAAbAA8AAAAAAAQAAAAbAA4AAAAAAAQAAAAbAA0AAAAAAAQAAAAbAAwAAAAAAAQAAAAbAAsAAAABAAQAAAAbAAoAAAAAAAQAAAAbAAkAAAAAAAQAAAAbAAgAAAAAAAQAAAAbAAcAAAAAAAQAAAAbAAYAAAAAAAQAAAAbAAUAAAAAAAQAAAAbAAQAAAAAAAQAAAAbAAMAAAAAAAQAAAAbAAIAAAAAAAQAAAAbAAEAAAAAAAQAAAAbAAAAAAAAAAQAAAAaABUAAAAAAAQAAAAaABQAAAAAAAQAAAAaABMAAAAAAAQAAAAaABIAAAAAAAQAAAAaABEAAAAAAAQAAAAaABAAAAABAAQAAAAaAA8AAAAAAAQAAAAaAA4AAAAAAAQAAAAaAA0AAAABAAQAAAAaAAwAAAAAAAQAAAAaAAsAAAABAAQAAAAaAAoAAAAAAAQAAAAaAAkAAAAAAAQAAAAaAAgAAAAAAAQAAAAaAAcAAAABAAQAAAAaAAYAAAAAAAQAAAAaAAUAAAAAAAQAAAAaAAQAAAABAAQAAAAaAAMAAAAAAAQAAAAaAAIAAAAAAAQAAAAaAAEAAAAGAAMAAAAaAAAAAAAAAAQAAAAZABUAAAABAAQAAAAZABQAAAAAAAQAAAAZABMAAAAGAAMAAAAZABIAAAAAAAQAAAAZABEAAAAAAAQAAAAZABAAAAABAAQAAAAZAA8AAAAAAAQAAAAZAA4AAAABAAQAAAAZAA0AAAAAAAQAAAAZAAwAAAAAAAQAAAAZAAsAAAAAAAQAAAAZAAoAAAAAAAQAAAAZAAkAAAAAAAQAAAAZAAgAAAAAAAQAAAAZAAcAAAAAAAQAAAAZAAYAAAABAAQAAAAZAAUAAAAAAAQAAAAZAAQAAAAAAAQAAAAZAAMAAAAAAAQAAAAZAAIAAAAAAAQAAAAZAAEAAAABAAQAAAAZAAAAAAAAAAQAAAAYABUAAAAAAAQAAAAYABQAAAAAAAQAAAAYABMAAAAAAAQAAAAYABIAAAAAAAQAAAAYABEAAAABAAQAAAAYABAAAAAAAAQAAAAYAA8AAAAAAAQAAAAYAA4AAAAAAAQAAAAYAA0AAAAAAAQAAAAYAAwAAAAAAAQAAAAYAAsAAAAAAAQAAAAYAAoAAAAAAAQAAAAYAAkAAAABAAQAAAAYAAgAAAAAAAQAAAAYAAcAAAAAAAQAAAAYAAYAAAAAAAQAAAAYAAUAAAABAAQAAAAYAAQAAAAAAAQAAAAYAAMAAAAAAAQAAAAYAAIAAAAAAAQAAAAYAAEAAAAAAAQAAAAYAAAAAAAAAAQAAAAXABUAAAAAAAQAAAAXABQAAAAAAAQAAAAXABMAAAAAAAQAAAAXABIAAAAAAAQAAAAXABEAAAABAAQAAAAXABAAAAABAAQAAAAXAA8AAAAGAAMAAAAXAA4AAAAGAAMAAAAXAA0AAAABAAQAAAAXAAwAAAABAAQAAAAXAAsAAAAAAAQAAAAXAAoAAAAAAAQAAAAXAAkAAAAAAAQAAAAXAAgAAAAAAAQAAAAXAAcAAAAAAAQAAAAXAAYAAAAAAAQAAAAXAAUAAAAAAAQAAAAXAAQAAAAAAAQAAAAXAAMAAAAAAAQAAAAXAAIAAAAGAAMAAAAXAAEAAAAGAAMAAAAXAAAAAAAAAAQAAAAWABUAAAAAAAQAAAAWABQAAAAAAAQAAAAWABMAAAAAAAQAAAAWABIAAAAAAAQAAAAWABEAAAAAAAQAAAAWABAAAAAAAAQAAAAWAA8AAAAAAAQAAAAWAA4AAAAAAAQAAAAWAA0AAAAAAAQAAAAWAAwAAAAAAAQAAAAWAAsAAAAAAAQAAAAWAAoAAAAAAAQAAAAWAAkAAAAAAAQAAAAWAAgAAAAAAAQAAAAWAAcAAAAAAAQAAAAWAAYAAAAAAAQAAAAWAAUAAAABAAQAAAAWAAQAAAAGAAMAAAAWAAMAAAAAAAQAAAAWAAIAAAABAAQAAAAWAAEAAAABAAQAAAAWAAAAAAAAAAQAAAAVABUAAAAAAAQAAAAVABQAAAAAAAQAAAAVABMAAAAAAAQAAAAVABIAAAAAAAQAAAAVABEAAAAAAAQAAAAVABAAAAAAAAQAAAAVAA8AAAAAAAQAAAAVAA4AAAAAAAQAAAAVAA0AAAAAAAQAAAAVAAwAAAABAAQAAAAVAAsAAAAAAAQAAAAVAAoAAAAAAAQAAAAVAAkAAAABAAQAAAAVAAgAAAAAAAQAAAAVAAcAAAAAAAQAAAAVAAYAAAAAAAQAAAAVAAUAAAAAAAQAAAAVAAQAAAAAAAQAAAAVAAMAAAAAAAQAAAAVAAIAAAAGAAMAAAAVAAEAAAAAAAQAAAAVAAAAAAAAAAQAAAAUABUAAAAAAAQAAAAUABQAAAAAAAQAAAAUABMAAAAAAAQAAAAUABIAAAAAAAQAAAAUABEAAAAAAAQAAAAUABAAAAABAAQAAAAUAA8AAAAAAAQAAAAUAA4AAAAAAAQAAAAUAA0AAAAAAAQAAAAUAAwAAAAAAAQAAAAUAAsAAAAAAAQAAAAUAAoAAAAAAAQAAAAUAAkAAAABAAQAAAAUAAgAAAAAAAQAAAAUAAcAAAAAAAQAAAAUAAYAAAAGAAMAAAAUAAUAAAAAAAQAAAAUAAQAAAAAAAQAAAAUAAMAAAAGAAMAAAAUAAIAAAAAAAQAAAAUAAEAAAAAAAQAAAAUAAAAAAAAAAQAAAATABUAAAABAAQAAAATABQAAAAAAAQAAAATABMAAAAAAAQAAAATABIAAAAAAAQAAAATABEAAAAAAAQAAAATABAAAAAAAAQAAAATAA8AAAAAAAQAAAATAA4AAAAAAAQAAAATAA0AAAAAAAQAAAATAAwAAAABAAQAAAATAAsAAAAAAAQAAAATAAoAAAAAAAQAAAATAAkAAAAAAAQAAAATAAgAAAAAAAQAAAATAAcAAAAAAAQAAAATAAYAAAABAAQAAAATAAUAAAAAAAQAAAATAAQAAAABAAQAAAATAAMAAAAAAAQAAAATAAIAAAAAAAQAAAATAAEAAAAAAAQAAAATAAAAAAAAAAQAAAASABUAAAAAAAQAAAASABQAAAAAAAQAAAASABMAAAAAAAQAAAASABIAAAAAAAQAAAASABEAAAAGAAMAAAASABAAAAAAAAQAAAASAA8AAAAAAAQAAAASAA4AAAAAAAQAAAASAA0AAAAAAAQAAAASAAwAAAABAAQAAAASAAsAAAAAAAQAAAASAAoAAAAAAAQAAAASAAkAAAAAAAQAAAASAAgAAAAAAAQAAAASAAcAAAAAAAQAAAASAAYAAAAAAAQAAAASAAUAAAAAAAQAAAASAAQAAAAAAAQAAAASAAMAAAAAAAQAAAASAAIAAAAAAAQAAAASAAEAAAAAAAQAAAASAAAAAAAAAAQAAAARABUAAAAAAAQAAAARABQAAAAAAAQAAAARABMAAAAAAAQAAAARABIAAAAAAAQAAAARABEAAAAAAAQAAAARABAAAAABAAQAAAARAA8AAAAAAAQAAAARAA4AAAAAAAQAAAARAA0AAAAAAAQAAAARAAwAAAABAAQAAAARAAsAAAAAAAQAAAARAAoAAAABAAQAAAARAAkAAAAAAAQAAAARAAgAAAABAAQAAAARAAcAAAAAAAQAAAARAAYAAAABAAQAAAARAAUAAAAAAAQAAAARAAQAAAAAAAQAAAARAAMAAAAAAAQAAAARAAIAAAAAAAQAAAARAAEAAAAAAAQAAAARAAAAAAAAAAQAAAAQABUAAAAAAAQAAAAQABQAAAAAAAQAAAAQABMAAAAAAAQAAAAQABIAAAAAAAQAAAAQABEAAAAAAAQAAAAQABAAAAAAAAQAAAAQAA8AAAAAAAQAAAAQAA4AAAABAAQAAAAQAA0AAAABAAQAAAAQAAwAAAAAAAQAAAAQAAsAAAAAAAQAAAAQAAoAAAAAAAQAAAAQAAkAAAAAAAQAAAAQAAgAAAAAAAQAAAAQAAcAAAAAAAQAAAAQAAYAAAABAAQAAAAQAAUAAAAAAAQAAAAQAAQAAAAAAAQAAAAQAAMAAAAAAAQAAAAQAAIAAAAAAAQAAAAQAAEAAAABAAQAAAAQAAAAAAAAAAQAAAAPABUAAAAAAAQAAAAPABQAAAAAAAQAAAAPABMAAAABAAQAAAAPABIAAAAAAAQAAAAPABEAAAAAAAQAAAAPABAAAAAGAAMAAAAPAA8AAAAAAAQAAAAPAA4AAAAAAAQAAAAPAA0AAAAAAAQAAAAPAAwAAAAAAAQAAAAPAAsAAAAAAAQAAAAPAAoAAAAAAAQAAAAPAAkAAAAAAAQAAAAPAAgAAAABAAQAAAAPAAcAAAAAAAQAAAAPAAYAAAAAAAQAAAAPAAUAAAAAAAQAAAAPAAQAAAAAAAQAAAAPAAMAAAABAAQAAAAPAAIAAAAAAAQAAAAPAAEAAAAAAAQAAAAPAAAAAAAAAAQAAAAOABUAAAAAAAQAAAAOABQAAAAAAAQAAAAOABMAAAABAAQAAAAOABIAAAAAAAQAAAAOABEAAAABAAQAAAAOABAAAAAAAAQAAAAOAA8AAAAAAAQAAAAOAA4AAAABAAQAAAAOAA0AAAAAAAQAAAAOAAwAAAAAAAQAAAAOAAsAAAAAAAQAAAAOAAoAAAAAAAQAAAAOAAkAAAAAAAQAAAAOAAgAAAAAAAQAAAAOAAcAAAAAAAQAAAAOAAYAAAAAAAQAAAAOAAUAAAAAAAQAAAAOAAQAAAAAAAQAAAAOAAMAAAAAAAQAAAAOAAIAAAAAAAQAAAAOAAEAAAABAAQAAAAOAAAAAAAAAAQAAAANABUAAAAAAAQAAAANABQAAAAAAAQAAAANABMAAAAAAAQAAAANABIAAAAAAAQAAAANABEAAAAAAAQAAAANABAAAAAAAAQAAAANAA8AAAAAAAQAAAANAA4AAAAAAAQAAAANAA0AAAAAAAQAAAANAAwAAAAAAAQAAAANAAsAAAABAAQAAAANAAoAAAAGAAMAAAANAAkAAAAAAAQAAAANAAgAAAAAAAQAAAANAAcAAAAAAAQAAAANAAYAAAAAAAQAAAANAAUAAAAAAAQAAAANAAQAAAAAAAQAAAANAAMAAAAGAAMAAAANAAIAAAAAAAQAAAANAAEAAAAAAAQAAAANAAAAAAABAAQAAAAMABUAAAABAAQAAAAMABQAAAABAAQAAAAMABMAAAAAAAQAAAAMABIAAAABAAQAAAAMABEAAAAAAAQAAAAMABAAAAAAAAQAAAAMAA8AAAAAAAQAAAAMAA4AAAABAAQAAAAMAA0AAAAAAAQAAAAMAAwAAAABAAQAAAAMAAsAAAAAAAQAAAAMAAoAAAAAAAQAAAAMAAkAAAAAAAQAAAAMAAgAAAABAAQAAAAMAAcAAAAAAAQAAAAMAAYAAAAAAAQAAAAMAAUAAAAAAAQAAAAMAAQAAAAAAAQAAAAMAAMAAAAAAAQAAAAMAAIAAAAAAAQAAAAMAAEAAAABAAQAAAAMAAAAAAAAAAQAAAALABUAAAAAAAQAAAALABQAAAABAAQAAAALABMAAAAAAAQAAAALABIAAAAAAAQAAAALABEAAAAAAAQAAAALABAAAAAAAAQAAAALAA8AAAABAAQAAAALAA4AAAAAAAQAAAALAA0AAAAAAAQAAAALAAwAAAAAAAQAAAALAAsAAAAAAAQAAAALAAoAAAABAAQAAAALAAkAAAAAAAQAAAALAAgAAAABAAQAAAALAAcAAAAAAAQAAAALAAYAAAAAAAQAAAALAAUAAAABAAQAAAALAAQAAAABAAQAAAALAAMAAAAAAAQAAAALAAIAAAAAAAQAAAALAAEAAAAGAAMAAAALAAAAAAAAAAQAAAAKABUAAAAAAAQAAAAKABQAAAAAAAQAAAAKABMAAAAAAAQAAAAKABIAAAAAAAQAAAAKABEAAAABAAQAAAAKABAAAAAAAAQAAAAKAA8AAAAAAAQAAAAKAA4AAAAGAAMAAAAKAA0AAAAAAAQAAAAKAAwAAAAAAAQAAAAKAAsAAAAAAAQAAAAKAAoAAAABAAQAAAAKAAkAAAAAAAQAAAAKAAgAAAAAAAQAAAAKAAcAAAAAAAQAAAAKAAYAAAABAAQAAAAKAAUAAAABAAQAAAAKAAQAAAAAAAQAAAAKAAMAAAAAAAQAAAAKAAIAAAAAAAQAAAAKAAEAAAABAAQAAAAKAAAAAAAAAAQAAAAJABUAAAAAAAQAAAAJABQAAAAAAAQAAAAJABMAAAAAAAQAAAAJABIAAAABAAQAAAAJABEAAAAGAAMAAAAJABAAAAAAAAQAAAAJAA8AAAAAAAQAAAAJAA4AAAAAAAQAAAAJAA0AAAABAAQAAAAJAAwAAAABAAQAAAAJAAsAAAAAAAQAAAAJAAoAAAAAAAQAAAAJAAkAAAAAAAQAAAAJAAgAAAABAAQAAAAJAAcAAAAAAAQAAAAJAAYAAAAAAAQAAAAJAAUAAAAAAAQAAAAJAAQAAAAAAAQAAAAJAAMAAAABAAQAAAAJAAIAAAAAAAQAAAAJAAEAAAAAAAQAAAAJAAAAAAABAAQAAAAIABUAAAAAAAQAAAAIABQAAAAAAAQAAAAIABMAAAAAAAQAAAAIABIAAAAAAAQAAAAIABEAAAABAAQAAAAIABAAAAAAAAQAAAAIAA8AAAAAAAQAAAAIAA4AAAAGAAMAAAAIAA0AAAAGAAMAAAAIAAwAAAAAAAQAAAAIAAsAAAAAAAQAAAAIAAoAAAAAAAQAAAAIAAkAAAAAAAQAAAAIAAgAAAAAAAQAAAAIAAcAAAABAAQAAAAIAAYAAAAAAAQAAAAIAAUAAAAAAAQAAAAIAAQAAAAAAAQAAAAIAAMAAAAAAAQAAAAIAAIAAAAAAAQAAAAIAAEAAAAAAAQAAAAIAAAAAAAAAAQAAAAHABUAAAAAAAQAAAAHABQAAAAAAAQAAAAHABMAAAABAAQAAAAHABIAAAAAAAQAAAAHABEAAAAAAAQAAAAHABAAAAAAAAQAAAAHAA8AAAAGAAMAAAAHAA4AAAAAAAQAAAAHAA0AAAABAAQAAAAHAAwAAAABAAQAAAAHAAsAAAAAAAQAAAAHAAoAAAAAAAQAAAAHAAkAAAAAAAQAAAAHAAgAAAABAAQAAAAHAAcAAAABAAQAAAAHAAYAAAAAAAQAAAAHAAUAAAABAAQAAAAHAAQAAAAAAAQAAAAHAAMAAAAAAAQAAAAHAAIAAAABAAQAAAAHAAEAAAABAAQAAAAHAAAAAAAAAAQAAAAGABUAAAAAAAQAAAAGABQAAAAAAAQAAAAGABMAAAAAAAQAAAAGABIAAAAAAAQAAAAGABEAAAABAAQAAAAGABAAAAAAAAQAAAAGAA8AAAAAAAQAAAAGAA4AAAABAAQAAAAGAA0AAAAAAAQAAAAGAAwAAAABAAQAAAAGAAsAAAAAAAQAAAAGAAoAAAABAAQAAAAGAAkAAAAAAAQAAAAGAAgAAAAAAAQAAAAGAAcAAAAAAAQAAAAGAAYAAAAAAAQAAAAGAAUAAAAAAAQAAAAGAAQAAAAAAAQAAAAGAAMAAAABAAQAAAAGAAIAAAAAAAQAAAAGAAEAAAAAAAQAAAAGAAAAAAABAAQAAAAFABUAAAABAAQAAAAFABQAAAAAAAQAAAAFABMAAAAAAAQAAAAFABIAAAAAAAQAAAAFABEAAAAAAAQAAAAFABAAAAAAAAQAAAAFAA8AAAAAAAQAAAAFAA4AAAAAAAQAAAAFAA0AAAAAAAQAAAAFAAwAAAAAAAQAAAAFAAsAAAAAAAQAAAAFAAoAAAAAAAQAAAAFAAkAAAAAAAQAAAAFAAgAAAAAAAQAAAAFAAcAAAAAAAQAAAAFAAYAAAAAAAQAAAAFAAUAAAAGAAMAAAAFAAQAAAAAAAQAAAAFAAMAAAAAAAQAAAAFAAIAAAAAAAQAAAAFAAEAAAABAAQAAAAFAAAAAAAAAAQAAAAEABUAAAABAAQAAAAEABQAAAAAAAQAAAAEABMAAAAAAAQAAAAEABIAAAAAAAQAAAAEABEAAAAAAAQAAAAEABAAAAABAAQAAAAEAA8AAAAAAAQAAAAEAA4AAAAAAAQAAAAEAA0AAAAAAAQAAAAEAAwAAAAAAAQAAAAEAAsAAAAAAAQAAAAEAAoAAAAAAAQAAAAEAAkAAAABAAQAAAAEAAgAAAAGAAMAAAAEAAcAAAABAAQAAAAEAAYAAAAAAAQAAAAEAAUAAAAAAAQAAAAEAAQAAAAAAAQAAAAEAAMAAAAAAAQAAAAEAAIAAAAAAAQAAAAEAAEAAAABAAQAAAAEAAAAAAAAAAQAAAADABUAAAABAAQAAAADABQAAAABAAQAAAADABMAAAABAAQAAAADABIAAAAAAAQAAAADABEAAAAAAAQAAAADABAAAAAAAAQAAAADAA8AAAAAAAQAAAADAA4AAAAAAAQAAAADAA0AAAAAAAQAAAADAAwAAAAAAAQAAAADAAsAAAABAAQAAAADAAoAAAAAAAQAAAADAAkAAAAAAAQAAAADAAgAAAAAAAQAAAADAAcAAAAAAAQAAAADAAYAAAAAAAQAAAADAAUAAAAAAAQAAAADAAQAAAAAAAQAAAADAAMAAAAAAAQAAAADAAAAAAAAAAQAAAACABUAAAAAAAQAAAACABQAAAABAAQAAAACABMAAAAAAAQAAAACABIAAAABAAQAAAACABEAAAAAAAQAAAACABAAAAAAAAQAAAACAA8AAAAAAAQAAAACAA4AAAAAAAQAAAACAA0AAAAAAAQAAAACAAwAAAAAAAQAAAACAAsAAAAAAAQAAAACAAoAAAABAAQAAAACAAkAAAAGAAMAAAACAAgAAAAAAAQAAAACAAcAAAAAAAQAAAACAAYAAAAAAAQAAAACAAUAAAAAAAQAAAACAAQAAAAAAAQAAAACAAMAAAAAAAQAAAACAAAAAAAAAAQAAAABABUAAAAAAAQAAAABABQAAAAAAAQAAAABABMAAAAAAAQAAAABABIAAAAAAAQAAAABABEAAAAAAAQAAAABABAAAAAAAAQAAAABAA8AAAAAAAQAAAABAA4AAAAAAAQAAAABAA0AAAAAAAQAAAABAAwAAAABAAQAAAABAAsAAAABAAQAAAABAAoAAAAAAAQAAAABAAkAAAAAAAQAAAABAAgAAAAAAAQAAAABAAcAAAAAAAQAAAABAAYAAAAAAAQAAAABAAUAAAABAAQAAAABAAQAAAABAAQAAAABAAMAAAAAAAQAAAABAAAAAAAAAAQAAAAAABUAAAAAAAQAAAAAABQAAAAAAAQAAAAAABMAAAABAAQAAAAAABIAAAAAAAQAAAAAABEAAAABAAQAAAAAABAAAAABAAQAAAAAAA8AAAAAAAQAAAAAAA4AAAAAAAQAAAAAAA0AAAAAAAQAAAAAAAwAAAAAAAQAAAAAAAsAAAABAAQAAAAAAAoAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAgAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAAIAAAABAAQAAAAAAAEAAAAAAAQAAAAAAAAAAAAAAAQAAAAoAP//AAAAAAQAAAAnAP//AAABAAQAAAAmAP//AAAAAAQAAAAlAP//AAAAAAQAAAAkAP//AAAAAAQAAAAjAP//AAAAAAQAAAAiAP//AAAAAAQAAAAhAP//AAAAAAQAAAAgAP//AAAAAAQAAAAfAP//AAAAAAQAAAAeAP//AAAAAAQAAAAdAP//AAAAAAQAAAAcAP//AAAAAAQAAAAbAP//AAAAAAQAAAAaAP//AAAAAAQAAAAZAP//AAABAAQAAAAYAP//AAAAAAQAAAAXAP//AAAAAAQAAAAWAP//AAAAAAQAAAAVAP//AAABAAQAAAAUAP//AAAGAAMAAAATAP//AAABAAQAAAASAP//AAAAAAQAAAARAP//AAABAAQAAAAQAP//AAAAAAQAAAAPAP//AAAAAAQAAAAOAP//AAAAAAQAAAANAP//AAABAAQAAAAMAP//AAAAAAQAAAALAP//AAAAAAQAAAAKAP//AAAAAAQAAAAJAP//AAAAAAQAAAAIAP//AAAAAAQAAAAHAP//AAABAAQAAAAGAP//AAAAAAQAAAAFAP//AAAAAAQAAAAEAP//AAAAAAQAAAADAP//AAAAAAQAAAACAP//AAAAAAQAAAABAP//AAAAAAQAAAAAAP//AAAAAAQAAAD//xUAAAAAAAQAAAD//xQAAAAAAAQAAAD//xMAAAAAAAQAAAD//xIAAAAAAAQAAAD//xEAAAAAAAQAAAD//xAAAAABAAQAAAD//w8AAAAAAAQAAAD//w4AAAAAAAQAAAD//w0AAAAAAAQAAAD//wwAAAABAAQAAAD//wsAAAAAAAQAAAD//woAAAAAAAQAAAD//wkAAAAAAAQAAAD//wgAAAAAAAQAAAD//wcAAAAAAAQAAAD//wYAAAAAAAQAAAD//wUAAAAAAAQAAAD//wQAAAAAAAQAAAD//wMAAAAAAAQAAAD//wIAAAAAAAQAAAD//wEAAAAAAAQAAAD//wAAAAABAAQAAAD/////AAABAAQAAAAoABcAAAAAAAQAAAAoABYAAAAAAAQAAAAnABcAAAABAAQAAAAnABYAAAAAAAQAAAAmABcAAAABAAQAAAAmABYAAAAAAAQAAAAlABcAAAAAAAQAAAAlABYAAAABAAQAAAAkABcAAAAAAAQAAAAkABYAAAAAAAQAAAAjABcAAAAGAAMAAAAjABYAAAAAAAQAAAAiABcAAAABAAQAAAAiABYAAAAAAAQAAAAhABcAAAAAAAQAAAAhABYAAAAAAAQAAAAgABcAAAAAAAQAAAAgABYAAAAAAAQAAAAfABcAAAAAAAQAAAAfABYAAAAGAAMAAAAeABcAAAAAAAQAAAAeABYAAAAAAAQAAAAdABcAAAABAAQAAAAdABYAAAAAAAQAAAAcABcAAAAAAAQAAAAcABYAAAAAAAQAAAAbABcAAAAAAAQAAAAbABYAAAAAAAQAAAAaABcAAAAAAAQAAAAaABYAAAAAAAQAAAAZABcAAAAAAAQAAAAZABYAAAAAAAQAAAAYABcAAAAAAAQAAAAYABYAAAAAAAQAAAAXABcAAAABAAQAAAAXABYAAAABAAQAAAAWABcAAAAAAAQAAAAWABYAAAAAAAQAAAAVABcAAAAGAAMAAAAVABYAAAAAAAQAAAAUABcAAAAAAAQAAAAUABYAAAAGAAMAAAATABcAAAAAAAQAAAATABYAAAABAAQAAAASABcAAAAAAAQAAAASABYAAAAAAAQAAAARABcAAAAAAAQAAAARABYAAAAGAAMAAAAQABcAAAAAAAQAAAAQABYAAAABAAQAAAAPABcAAAAAAAQAAAAPABYAAAAAAAQAAAAOABcAAAAAAAQAAAAOABYAAAAGAAMAAAANABcAAAAAAAQAAAANABYAAAAAAAQAAAAMABcAAAABAAQAAAAMABYAAAAAAAQAAAALABcAAAAAAAQAAAALABYAAAAAAAQAAAAKABcAAAAAAAQAAAAKABYAAAAAAAQAAAAJABcAAAAGAAMAAAAJABYAAAAAAAQAAAAIABcAAAAAAAQAAAAIABYAAAABAAQAAAAHABcAAAAAAAQAAAAHABYAAAAAAAQAAAAGABcAAAAAAAQAAAAGABYAAAAAAAQAAAAFABcAAAAAAAQAAAAFABYAAAABAAQAAAAEABcAAAAAAAQAAAAEABYAAAAAAAQAAAADABcAAAAAAAQAAAADABYAAAAAAAQAAAACABcAAAABAAQAAAACABYAAAAAAAQAAAABABcAAAAAAAQAAAABABYAAAABAAQAAAAAABcAAAAAAAQAAAAAABYAAAAAAAQAAAD//xcAAAAAAAQAAAD//xYAAAAAAAQAAAA=")
tile_set = ExtResource("1_0hygj")

[node name="Entities" type="Node2D" parent="." groups=["entities_layer"]]
y_sort_enabled = true

[node name="Player" parent="Entities" instance=ExtResource("1_kebg5")]
unique_name_in_owner = true
position = Vector2(631, 361)

[node name="Foreground" type="Node2D" parent="." groups=["foreground_layer"]]
